# opengl-playground

./: CMakeLists.txt
resources/assimp_game/: general.fs.glsl
resources/sphere_game/: general.vs.glsl
src/: game.cpp  game.hpp  main.cpp  shape.cpp  shape.hpp  terrain.cpp  terrain.hpp  time.hpp
src/colliding/: collide.cpp  colliding.hpp  intersects.cpp
src/games/assimp_game/: assimp_game.cpp  assimp_game.hpp  mvp.cpp
src/games/collision_game/: collision_game.cpp  collision_game.hpp  mvp.cpp  player_update.cpp
src/games/movement_game/: movement_game.cpp  movement_game.hpp  mvp.cpp  player_update.cpp
src/games/sphere_game/: camera.hpp  dig.cpp  mvp.cpp  sphere_game.cpp  sphere_game.hpp
src/games/terrain_game/: mvp.cpp  terrain_game.cpp  terrain_game.hpp  update_player.cpp
